--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -2,6 +2,7 @@
     max-width: 350px;
     min-height: 420px;
     padding-bottom: 15px;
+    margin-bottom: 100px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
