--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -4,6 +4,7 @@
     width: 100%;
     padding: 36px 80px;
     display: flex;
+    align-items: center;
     justify-content: space-between;
     position: fixed;
     z-index: 10;
