--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -3,7 +3,7 @@
 }
 .content__items {
     width: 100%;
-    padding: 105px 150px;
+    padding: 105px 150px 0 150px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
