--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -6,6 +6,9 @@
     padding: 105px 150px 55px 150px;
     display: flex;
     justify-content: space-between;
+    &-clear {
+        margin: 0 0 100px 300px;
+    }
 }
 .content__items > *:not(:last-child) {
     margin-right: 25px;
