--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -7,7 +7,9 @@
     font-family: "Proxima Nova";
 }
 body {
-    background: #005c97;
     background: -webkit-linear-gradient(to right, #363795, #005c97);
     background: linear-gradient(to right, #363795, #005c97);
+}
+._container {
+    padding: 200px 165px;
 }
