--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -7,7 +7,7 @@
         margin: 0 0 100px 300px;
     }
 }
-.content__items > *:not(:last-child) {
+.content__items > * {
     margin-right: 25px;
 }
 .content__filters {
