--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -7,13 +7,14 @@
     align-items: center;
     justify-content: space-between;
     position: fixed;
-    z-index: 10;
+    z-index: 6;
 }
 .header__logo {
     img {
         background: white;
         padding: 5px;
         border-radius: 25%;
+        width: 54px;
     }
     display: flex;
     align-items: center;
