--- a/src/scss/components/_cart.scss
+++ b/src/scss/components/_cart.scss
@@ -4,7 +4,7 @@
     height: 100%;
     width: 100%;
     &__content {
-        width: 860px;
+        width: 60%;
         h1 {
             margin-bottom: 40px;
         }
