--- a/src/scss/components/_pagination.scss
+++ b/src/scss/components/_pagination.scss
@@ -1,10 +1,13 @@
 .pagination {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
     padding: 0 0 150px 150px;
     color: white;
     font-size: 25px;
+    &__li:not(:last-of-type) {
+        margin-right: 15px;
+    }
     &__li {
         cursor: pointer;
         display: flex;
