--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -184,7 +184,6 @@
 
     .cart__item {
         justify-content: space-evenly;
-        align-items: flex-start;
         &-info {
             flex-direction: column;
             align-items: center;
@@ -236,6 +235,9 @@
         p {
             font-size: 19px;
         }
+    }
+    .card__cartcount {
+        margin-left: 25px;
     }
 }
 @media (max-width: 416px) {
