--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -126,6 +126,12 @@
     }
 }
 @media (max-width: 626px) {
+    .empty__title {
+        font-size: 23px;
+    }
+    .empty__subtitle {
+        font-size: 14px;
+    }
     .items-content {
         justify-content: center;
     }
@@ -249,6 +255,13 @@
     }
     ._container {
         padding: 200px 35px;
+    }
+
+    .empty__title {
+        font-size: 19px;
+    }
+    .empty__subtitle {
+        font-size: 12px;
     }
 }
 @media (max-width: 320px) {
